# EveryDayCode

./: .gitignore  CMakeLists.txt  README.md
config/: config.sh
playground/: CMakeLists.txt  playground.cpp  playground.cxx
playground/includes/: CMakeLists.txt  playground_lib.cpp  playground_lib.hpp
scripts/cmake/: PrintVariables.cmake
scripts/sh/: echo-messages.sh  leetcode-manager.sh  playground-manager.sh
src/: CMakeLists.txt
src/challenges/: CMakeLists.txt
src/challenges/leetcode/: 1-Two-Sum.cpp  100-Same-Tree.cpp  1071-Greatest-Common-Divisor-of-Strings.cpp  1137-N-th-Tribonacci-Number.cpp  121-Best-Time-to-Buy-and-Sell-Stock.cpp  134-Gas-Station.cpp  142-Linked-List-Cycle-II.cpp  144-Binary-Tree-Preorder-Traversal.cpp  1443-Minimum-Time-to-Collect-All-Apples-in-a-Tree.cpp  1480-Running-Sum-of-1d-Array.cpp  150-Evaluate-Reverse-Polish-Notation.cpp  1519-Number-of-Nodes-in-the-Sub-Tree-With-the-Same-Label.cpp  1523-Count-Odd-Numbers-in-an-Interval-Range.cpp  1626-Best-Team-With-No-Conflicts.cpp  1833-Maximum-Ice-Cream-Bars.cpp  189-Rotate-Array.cpp  205-Isomorphic-Strings.cpp  206-Reverse-Linked-List.cpp  21-Merge-Two-Sorted-Lists.cpp  2244-Minimum-Rounds-to-Complete-All-Tasks.cpp  2246-Longest-Path-With-Different-Adjacent-Characters.cpp  226-Invert-Binary-Tree.cpp  2359-Find-Closest-Node-to-Given-Two-Nodes.cpp  2413-Smallest-Even-Multiple.cpp  283-Move-Zeroes.cpp  35-Search-Insert-Position.cpp  392-Is-Subsequence.cpp  409-Longest-Palindrome.cpp  45-Jump-Game-II.cpp  452-Minimum-Number-of-Arrows-to-Burst-Balloons.cpp  472-Concatenated-Words.cpp  491-Non-decreasing-Subsequences.cpp  6-Zigzag-Conversion.cpp  70-Climbing-Stairs.cpp  724-Find-Pivot-Index.cpp  746-Min-Cost-Climbing-Stairs.cpp  783-Minimum-Distance-Between-BST-Nodes.cpp  787-Cheapest-Flights-Within-K-Stops.cpp  876-Middle-of-the-Linked-List.cpp  909-Snakes-and-Ladders.cpp  (+10 more)
src/challenges/leetcode/includes/: ListNode.h  Print.h  TreeNode.h
src/playground-examples/: CMakeLists.txt  auto-change-function.cpp  functionPointers.cpp  lambda-mutable.cpp  once-time-set.cpp  std-functions-inside-object.cpp
src/playground-examples/static-variables-in-libs/: playground.cpp
src/playground-examples/static-variables-in-libs/includes/: NewTest.cpp  NewTest.hpp  Test.cpp  Test.hpp
