# =============================================================================
# General settings
# -----------------------------------------------------------------------------
cmake_minimum_required(VERSION 3.22.1)

project(
	SourceCode
	VERSION 1.0.0
	DESCRIPTION "Main source code folder"
	LANGUAGES CXX
)

# =============================================================================
# Compiler settings
# -----------------------------------------------------------------------------

# =============================================================================
# Project settings
# -----------------------------------------------------------------------------

add_subdirectory(challenges)